--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Odyn's Portfolio</title>
     <!-- Link to your CSS file -->
 
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
-    <!-- Font Awesome CSS -->
+    <link rel="stylesheet" href="/css/style.css">
+  <!-- Font Awesome CSS -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head><!crazy>
 
