--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
         <div class="home-img-wrapper">
             <div class="home-img">
-                <img src="/images/profile page_20240510_194115.jpg" alt="Ezra Odyn">
+                <img src="/profile page_20240510_194115.jpg" alt="Ezra Odyn">
             </div>
         </div>
     </section>
@@ -148,7 +148,7 @@
 
             <div class="wrapper">
                 <div class="testimonials-items">
-                    <img src="/images/download1.png" alt="">
+                    <img src="/download1.png" alt="">
                     <h2>Mr.Tumaini</h2>
                     <div class="rating">
                         <i class='bx bxs-star'></i>
@@ -161,7 +161,7 @@
                     <p>With a little more practise cybersecurity will become something prominent based on the skill i have seen</p>
                 </div>
                 <div class="testimonials-items">
-                    <img src="/images/download1.png" alt="">
+                    <img src="/download1.png" alt="">
                     <h2>Mr.Kepha</h2>
                     <div class="rating">
                         <i class='bx bxs-star'></i>
@@ -174,7 +174,7 @@
                     <p>As a client, I am thoroughly impressed by the efficiency and expertise demonstrated by [Your Name] as an app developer. Their attention to detail, timely delivery, and innovative solutions have surpassed my expectations. The seamless functionality and user-friendly interface of the app reflect their exceptional skills and dedication to excellence. I highly recommend Ezra for any app development project. </p>
                 </div>
                 <div class="testimonials-items">
-                    <img src="/images/download1.png" alt="">
+                    <img src="/download1.png" alt="">
                     <h2>Mrs Namho</h2>
                     <div class="rating">
                         <i class='bx bxs-star'></i>
