--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
         <div class="home-img-wrapper">
             <div class="home-img">
-                <img src="/profile page_20240510_194115.jpg" alt="Ezra Odyn">
+                <img src="/profile.jpg" alt="Ezra Odyn">
             </div>
         </div>
     </section>
