--- a/index.html
+++ b/index.html
@@ -192,24 +192,19 @@
     <section class="contact" id="contact">
         <h2 class="heading">Contact<span>Me</span></h2>
 
-        <form action="">
+        <form action="https://formspree.io/f/xdoqjajd" method ="POST">
             <div class="input-group">
                 <div class="input-box">
-                    <input type="text"
-                     placeholder="Full Name">
-                     <input type="email"
-                     placeholder="Email">
+                    <input type="text" name ="name" placeholder="Full Name" required>
+                     <input type="email" name = "email" placeholder="Email"required>
                 </div>
                 <div class="input-box">
-                    <input type="number"
-                     placeholder="Phone Number">
-                     <input type="text"
-                     placeholder="Subject">
+                    <input type="number" name ="Phone number" placeholder="Phone Number" required>
+                     <input type="text" name ="Subject" placeholder="Subject" required>
                 </div>
             </div>
             <div class="input-group-2">
-                <textarea name="" id="" cols="30"
-                 rows="10" placeholder="your Message"></textarea>
+                <textarea name="Message" id="" cols="30"rows="10" placeholder="your Message" required></textarea>
                  <input type="submit" value="SendMessage" class="btn"
             </div>
         </form>
