--- a/index.html
+++ b/index.html
@@ -111,30 +111,35 @@
         <div class="services-container">
             <div class= "services-box">
                 <div class="service-info">
+                    <i class="bx bxs-devices"></i>
                     <h4>Frontend Designer</h4>
                     <p>As a frontend designer, I thrive on crafting captivating digital experiences. With ongoing projects, I immerse myself in mastering new technologies like Figma and Bootstrap, driven by an insatiable curiosity and dedication to staying at the forefront of design innovation. </p>
                 </div>
             </div>
             <div class= "services-box">
                 <div class="service-info">
+                    <i class="bx bx-code-curly"></i>
                     <h4>Backend developer</h4>
                     <p> As a backend developer, I excel in architecting robust digital infrastructures. My journey into Python and other app development technologies underscores a relentless pursuit of mastery and innovation, shaping resilient solutions that drive efficiency and scalability in the digital realm.</p>
                 </div>
             </div>
             <div class= "services-box">
                 <div class="service-info">
+                    <i class="bx bxs-check-shield"></i>
                     <h4>CybersecurityAnalyst</h4>
                     <p> Venturing into cybersecurity, I immerse myself in platforms like Hack The Box and TryHackMe, honing my skills through hands-on challenges. With a thirst for knowledge, I navigate the intricate world of cybersecurity, continuously refining my expertise to safeguard digital assets against evolving threats.</p>
                 </div>
             </div>
             <div class= "services-box">
                 <div class="service-info">
+                    <i class="bx bxs-magic-wand"></i>
                     <h4>Sartorial aficionado</h4>
                     <p> I Know your asking yourself what this is😂.As a sartorial aficionado, I passionately explore the realm of fashion, embracing diverse styles and trends. From meticulously curated ensembles to an eye for detail, my journey reflects a dedication to refining personal aesthetics and celebrating the artistry of clothing.</p>
                 </div>
             </div>
             <div class= "services-box">
                 <div class="service-info">
+                    <i class="bx bx-tab"></i>
                     <h4>App Developer</h4>
                     <p>As an app developer, I immerse myself in Android Studio, crafting dummy apps to refine my skills. Constantly exploring new methodologies, I strive to innovate and enhance user experiences, driven by a relentless pursuit of excellence in application development. </p>
                 </div>
